# discovery

./: Cargo.toml  Debugging.md
src/05-led-roulette/src/: main.rs
src/07-registers/src/: main.rs
src/09-clocks-and-timers/: Cargo.toml
src/09-clocks-and-timers/auxiliary/src/: lib.rs
src/09-clocks-and-timers/src/: main.rs
src/14-i2c/auxiliary/: Cargo.toml
src/14-i2c/auxiliary/src/: lib.rs
src/14-i2c/src/: main.rs
src/16-punch-o-meter/auxiliary/src/: lib.rs
src/POC_accel/: Cargo.toml
src/POC_accel/auxiliary/: Cargo.toml
src/POC_accel/auxiliary/src/: S  lib.rs
src/POC_accel/src/: main.rs
src/POC_adc/: Cargo.toml
src/POC_adc/src/: main.rs
src/POC_dac/: Cargo.toml
src/POC_dac/auxiliary/src/: lib.rs
src/POC_dac/src/: main.rs
src/POC_gyro/: Cargo.toml
src/POC_gyro/auxiliary/: Cargo.toml
src/POC_gyro/auxiliary/src/: lib.rs
src/POC_gyro/src/: main.rs  main_old.rs
src/POC_pwm/: Cargo.toml
src/POC_pwm/auxiliary/src/: lib.rs
src/POC_pwm/src/: main.rs  motor1_led1.rs  reset_button.rs
src/POC_timer_int/: Cargo.toml  README.md
src/POC_timer_int/doc/: README.html
src/POC_timer_int/src/: led_interrupt_timer.rs  main.rs
src/WIP-async-io-the-future/src/: main.rs
src/drone_flight_controller/: Cargo.toml  README.md
src/drone_flight_controller/src/: accel_and_compas.rs  data_types.rs  gyro.rs  io_parts.rs  main.rs
