[workspace]
members = [
  "src/05-led-roulette",
  "src/06-hello-world",
  "src/07-registers",
  "src/08-leds-again",
  "src/09-clocks-and-timers",
  "src/11-usart",
  "src/14-i2c",
  "src/15-led-compass",
  "src/16-punch-o-meter",
  "src/POC_accel",
  "src/POC_adc",
  "src/POC_dac",
  "src/POC_pwm",
  "src/POC_gyro",
  "src/POC_timer_int",
  "src/drone_flight_controller",
]

[profile.release]
codegen-units = 1
debug = true
lto = true
